# feud

./: .gitignore  CMakeLists.txt  README.md  build.sh  debug.cap  premake5.lua
Client/include/: Drawable.hpp  EntityManager.hpp  GameplayInterfaceSystem.hpp  MatchStateSystem.hpp  Model.hpp  NetworkSystem.hpp  ShaderDefinition.hpp  Text.hpp  TimedEvent.hpp  TimedEventSystem.hpp  UserInput.hpp  UserInputSystem.hpp
Client/src/: main.cpp
Common/include/: MatchState.hpp
Common/src/: MatchState.cpp
Server/include/: ServerEntityManager.hpp  ServerSystem.hpp
include/: Animation.hpp  AnimationDefinition.hpp  AnimationSystem.hpp  BoardSystem.hpp  Drawable.hpp  Entity.hpp  EntityManager.hpp  GraphicsManager.h  GraphicsManager.hpp  MatchState.hpp  Mesh.hpp  Model.hpp  NetworkAction.hpp  NetworkEvent.hpp  NetworkSystem.hpp  Piece.hpp  RenderSystem.hpp  ServerSystem.hpp  ShaderDefinition.hpp  Text.hpp  Transform.hpp  UserAction.hpp  UserActionSystem.hpp  UserInput.hpp  UserInputSystem.hpp
include/graphics/: Shader.hpp
models/: cube  piece.dae  score.dae  textured_plane.blend  textured_plane.blend1  textured_plane.mtl
scripts/: build_run.sh  build_run_win.ps1  build_win.ps1  clean.sh  clean_win.ps1  run_win.ps1
shaders/: base.desc  base.fs  base.vs  piece.desc  piece.fs  piece.vs  shader2D.desc  shader2D.vs  simple.desc  simple.fs  simple.vs  text.desc  text.fs  text.vs
src/: AnimationSystem.cpp  Blocks.cpp  BoardSystem.cpp  Box.cpp  CMakeLists.txt  Camera.cpp  Drawable.cpp  GraphicsManager.cpp  Mesh.cpp  ShaderDefinition.cpp  main.cpp
src/graphics/: Shader.cpp
textures/: piece.xcf
